--- a/src/views/admin_layout.pug
+++ b/src/views/admin_layout.pug
@@ -48,4 +48,12 @@ body.hold-transition.light-skin.sidebar-mini.theme-primary.fixed
   script(src='/js/pages/form-validation.js')
   script(src='/assets/vendor_components/datatable/datatables.min.js')
   script(src='/js/pages/data-table.js')
-    
+
+  script(src="/assets/vendor_components/apexcharts-bundle/dist/apexcharts.js")
+  script(src="/assets/vendor_components/jquery.peity/jquery.peity.js")
+  script(src="/assets/vendor_components/easypiechart/dist/jquery.easypiechart.js")
+  script(src="/assets/vendor_components/chart.js-master/Chart.min.js")
+  script(src="/assets/vendor_components/d3/d3.min.js")
+  script(src="/assets/vendor_components/d3/d3_tooltip.js")
+
+  script(src="/js/pages/chart-widgets.js")
