--- a/src/views/partial/header.pug
+++ b/src/views/partial/header.pug
@@ -51,7 +51,7 @@ header.main-header
               //-   i.ti-settings.text-muted.me-2
               //-   |  Settings
               //- .dropdown-divider
-              a.dropdown-item(href='#')
+              a.dropdown-item(href='/logout')
                 i.ti-lock.text-muted.me-2
                 |  Logout
         // Control Sidebar Toggle Button
