--- a/src/views/partial/aside.pug
+++ b/src/views/partial/aside.pug
@@ -5,37 +5,44 @@ aside.main-sidebar
 			.multinav-scroll(style='height: 100%;')
 				// sidebar menu
 				ul.sidebar-menu(data-widget='tree')
-					li.treeview(style='padding-left: 0px; padding-right: 0px;') 	
-						include profile.pug
+					//- li.treeview(style='padding-left: 0px; padding-right: 0px;') 	
+					//- 	include profile.pug
 					li
-						a(href='/request')
+						a(href='/dashboard')
 							i(data-feather='monitor')
 							span Dashboard
 							span.pull-right-container
 								i.fa.fa-angle-right.pull-right
 					- if(typeof profile !== 'undefined'){
-						- if(profile.role != 0){
+						- if(profile.roleLabel == 'admin'){
 							li
-								a(href='/api/v1/requesttravel/list')
-									i(data-feather='list')
-									span Request List
+								a(href='/user')
+									i(data-feather='user')
+									span Users
+									span.pull-right-container
+										i.fa.fa-angle-right.pull-right
+							li
+								a(href='/roles')
+									i(data-feather='user')
+									span Roles
+									span.pull-right-container
+										i.fa.fa-angle-right.pull-right
+							li
+								a(href='/filter')
+									i(data-feather='user')
+									span Executive Manager
+									span.pull-right-container
+										i.fa.fa-angle-right.pull-right
+						- } else if(profile.roleLabel != 'admin'){
+							li
+								a(href='/filter')
+									i(data-feather='user')
+									span Invoices
 									span.pull-right-container
 										i.fa.fa-angle-right.pull-right
 						- }
 					- }
-					li
-						a(href='/user')
-							i(data-feather='user')
-							span Users
-							span.pull-right-container
-								i.fa.fa-angle-right.pull-right
-					li
-						a(href='/roles')
-							i(data-feather='user')
-							span Roles
-							span.pull-right-container
-								i.fa.fa-angle-right.pull-right
 					.copyright.text-start.m-25
 						p
-							strong.d-block SSAI
+							strong.d-block SSAI Invoice Reports
 							|  © 2023 All Rights Reserved
